--- a/PROP_MGMNT/src/main/webapp/i18n/en/home.json
+++ b/PROP_MGMNT/src/main/webapp/i18n/en/home.json
@@ -1,7 +1,7 @@
 {
     "home": {
-        "title": "Welcome, Java Hipster!",
-        "subtitle": "This is your homepage",
+        "title": "Property Management Portal!",
+        "subtitle": " For Borrowers,Lenders & Tenants",
         "logged": {
             "message": "You are logged in as user \"{{username}}\"."
         },
