--- a/PROP_MGMNT/src/main/webapp/i18n/en/home.json
+++ b/PROP_MGMNT/src/main/webapp/i18n/en/home.json
@@ -1,6 +1,6 @@
 {
     "home": {
-        "title": "Property Management Portal!",
+        "title": "Property Management Portal",
         "subtitle": " For Borrowers,Lenders & Tenants",
         "logged": {
             "message": "You are logged in as user \"{{username}}\"."
